--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head th:replace = "fragments :: head">
 </head>
 <body>
+    <div class="loader"></div>
     <nav th:replace = "fragments :: navigation"></nav>
 
     <div class="table-striped table-responsive container" style="margin-top: 2%; margin-bottom: 2%;">
@@ -51,12 +52,12 @@
 
     $(document).ready(function(){
         let path = "rest/feed/articles";
-
         $.when($.get(path)).done(function(feedData){
             articles = fetchArticles(feedData);
             articles.forEach(function(article){
                 createTableRow(article);
             });
+            $(".loader").hide();
         });
 
         loginUser();
