--- a/src/main/resources/templates/usersignup.html
+++ b/src/main/resources/templates/usersignup.html
@@ -50,20 +50,20 @@
     document.getElementById("loginButton").addEventListener("click", function(event){
 
         var username = document.getElementById("username").value;
-        console.log(username);
         var password = document.getElementById("password").value;
-        console.log(password);
         var vPassword = document.getElementById("vPassword").value;
-        console.log(vPassword);
 
-        register(username, password);
+        if(password == vPassword){
+            register(username, password);
+        } else {
+            displayError("Passwords must match");
+        }
 
         event.preventDefault();
     });
 
     function register(username, password){
-        console.log("register/newuser?username=" + username + "&password=" + password);
-        $.post("register/newuser?username=" + username + "&password=" + password, function(data){
+        $.post("register", {username: username, password: password}, function(data){
             console.log(data);
             if(data != "success"){
                 displayError(data);
