--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,13 +2,35 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace = "fragments :: head">
 </head>
+
+<style>
+
+    .glyphicon-remove{
+        float: right;
+        font-size: 1.8em;
+    }
+
+    .removePublisher {
+        position: absolute;
+        top: 17%;
+        right: 5%;
+        font-size: 2.5em;
+    }
+
+    @media screen and (min-width: 1400px) {
+        .container {
+            max-width: 30%;
+            display: block;
+            margin: 35%;
+        }
+    }
+</style>
+
 <body>
     <nav th:replace = "fragments :: navigation"></nav>
-
-    <div style="font-size: 4em; color: red">WIP: jQuery back being hooked up. Nothing works yet.</div>
     <div id="errorMessage"></div>
 
-    <span class="container form">
+    <span class="">
         <div class="page-header" style = "margin: 1.8%;">
             <h1>Administrator Panel</h1>
         </div>
@@ -25,164 +47,32 @@
 
         <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
 
-        <div class="form-group w-25" style="margin: 1%">
-            <h1 class="display-5 form_header">Remove Publisher</h1>
-            <div class="table-striped table-responsive container" style="margin-top: 2%; margin-bottom: 2%;">
-                <table class = "table table-striped" id="removePublisherTable" style = "max-width:80%;">
-                    <col width="130"/>
-                    <col width="20"/>
-                </table>
-            </div>
-        </div>
-
-        <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
-
         <form class="form-group w-25" style="margin: 1%">
-            <h1 class="display-5 form_header">Add Link</h1>
+            <h1 class="display-5 form_header">Add Feed</h1>
             <div class="form-group">
                 <select name="publisherDd"  class="form-control" id="publisherDd">
                 </select>
 
                 <div class="form-group">
-                    <label for="linkTitle">Title</label>
-                    <input type="text" name="linkTitle" class="form-control" id = "linkTitle"/>
+                    <label for="feedTitle">Title</label>
+                    <input type="text" class="form-control" id = "feedTitle"/>
                 </div>
 
                 <div class="form-group">
-                    <label for="linkUrl">Link</label>
-                    <input type="text" name="linkUrl" class="form-control" id = "linkUrl"/>
+                    <label for="feedLink">Link</label>
+                    <input type="text" name="linkUrl" class="form-control" id = "feedLink"/>
                 </div>
-                <input type="submit" value="Add" class="form-control w-25" id="addLinkSub"/>
+                <input type="button" value="Add" class="form-control w-25" id="addLinkSub"/>
             </div>
         </form>
 
         <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
 
-        <form method="post" class="form-group w-25" id="removeLinkForm" style="margin: 1%">
-
-            <input type="submit" value="Remove" class="form-control w-25" id="removeLinkBtn">
-        </form>
+        <div method="post" class="container" id="removeLinkForm" style="margin: 1%">
+        </div>
     </span>
 </body>
 
-<script>
-    $(document).ready(function(){
-
-        $.get("rest/feed/all", function(data){
-            var list = fetchFeeds(data);
-            for(p in list){
-                createPublisherElements(list[p]);
-            }
-        });
-
-    });
-
-    $("#addPub").click(function(event) {
-        var pub = $("#pubName").val();
-
-        $.post("admin/addPublisher?publisher=" + pub, function(data){
-            if(data != "added"){
-                displayError(data);
-            }
-        });
-        
-        event.preventDefault();
-    });
-    
-    $("#errorMessage").click(function() {
-        $("#errorMessage").text("");
-        $("#password").val("");
-    });
-
-    //TODO: Add functionality.
-    $("#addLinkSub").click(function(event) {
-
-        let url ="rest/admin/addLink"+
-            "?PubId=" + $("#publisherDd").find(":selected").val() + 
-            "&Title=" + $("#linkTitle").val() +
-            "&Link=" + $("#linkUrl").val();
-        
-        $.post(url, function(data){
-        });
-
-        event.preventDefault();
-    });
-
-    //TODO: Add functionality.
-    $("#removeLink").click(function(event) {
-        event.preventDefault();
-    });
-
-    function displayError(errorMessage) {
-        document.getElementById("errorMessage").innerText = errorMessage;
-    }
-
-    function createPublisherElements(publisher) {
-        let removeRow = "<tr id=\"" + publisher.id + "\" scope = \"row\">";
-
-        removeRow += "<td>" + publisher.title + "</td>";
-        removeRow += "<td class=\"button\">" + "<span class=\"glyphicon glyphicon-remove\" onClick=\"removePublisher(" + publisher.id + ")\"/>" + "</td>";
-        removeRow += "</tr>";
-
-        $("#removePublisherTable").append(removeRow);
-
-        $("#publisherDd").append($("<option id=\"Dd" + publisher.id + "\"></option>").html(publisher.title).val(publisher.id));
-        
-        $("#removeLinkForm").append($("<span></span>").attr("id", publisher.id).append($("<h1></h1>").text(publisher.title)));
-        $("#removeLinkForm #" + publisher.id).append("<ul></ul>");
-        
-        for(var l in publisher.feeds){
-            console.log(publisher.feeds[l].title);
-            $("#removeLinkForm #" + publisher.id + " ul").append($("<li></li>").text(publisher.feeds[l].title));
-        }
-
-    }
-
-    function fetchFeeds(data) {
-        var retPublishers = [];
-
-        xmlDoc = $.parseXML(data);
-        $xml = $( xmlDoc );
-
-        $publishers = $xml.find("subscriptions");
-        
-        $("publisherXml", $publishers).each(function(i, element) {
-            var nPub = new Publisher(element);
-
-            var i = 0;
-            $(element).find("link").each(function(i, element) {
-                i++;
-                var feed = new Feed(element);
-                nPub.feeds.push(feed);
-            });
-            retPublishers.push(nPub);
-        })
-
-        return retPublishers;
-    }
-
-    function removePublisher(id) {
-        $.post("/admin/removePublisher", {id: id}, function(data){
-            if(data == "deleted"){
-                $("#" + id).remove();
-                $("#Dd" + id).remove();
-            }
-        });
-    }
-
-    class Publisher {
-        constructor(element) {
-            this.id = $(element).find("id").first().text();
-            this.title = $(element).find("name").text();
-            this.feeds = [];
-        }
-    }
-
-    class Feed {
-        constructor(element) {
-            this.id = $(element).find("id").text();
-            this.title = $(element).find("title").text();
-        }
-    }
+<script type="text/javascript" th:src="@{javascript/AdminUtility.js}">
 </script>
 </html>
