--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{styles/bootstrap/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{styles/errors.css}"/>
     <link rel="stylesheet" th:href="@{styles/loader.css}"/>
+    <link rel="stylesheet" th:href="@{styles/common.css}">
     <style>
         @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
     </style>
@@ -26,7 +27,7 @@
 
         <span th:unless = "${session.userId == null}" class="navbar-nav navbar-right ml-auto">
             <div class = "nav-link" id="logout"><a class = "nav-link"><span class="glyphicon glyphicon-log-out" style="margin-right: 10px"></span>Logout</a></div>
-            <div class = "nav-link"><a class = "nav-link" href="/managefeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></div>
+            <div class = "nav-link pointer"><a class = "nav-link" href="/managefeeds"><span class="glyphicon glyphicon-cog" style="margin-right: 10px"></span>Manage Feeds</a></div>
 
             <span th:if = "${session.role == 'ADMIN'}">
                 <div class = "nav-link"><a class = "nav-link" href="/admin"><span class="glyphicon glyphicon-warning-sign" style="margin-right: 10px"></span>Admin</a></div>
