Fix bug with redundant container in admin panel causing sizing glitch.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,7 +30,7 @@
     <nav th:replace = "fragments :: navigation"></nav>
     <div id="errorMessage"></div>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="page-header" style = "margin: 1.8%;">
             <h1>Administrator Panel</h1>
         </div>
@@ -82,10 +82,10 @@
 
         <div class="row">
             <div class="col"></div>
-            <div class="col-10">
+            <div class="col-xl">
                 <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
             
-                <div method="post" class="container" id="removeLinkForm" style="margin: 1%">
+                <div method="post" id="removeLinkForm" style="margin: 1%">
                 </div>
             </div>
             <div class="col"></div>
