--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,25 +30,31 @@
     <nav th:replace = "fragments :: navigation"></nav>
     <div id="errorMessage"></div>
 
-    <div class="container">
-        <div class="page-header" style = "margin: 1.8%;">
-            <h1>Administrator Panel</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm"></div>
+            <div class="col-sm">
+                <div class="page-header" style = "margin: 1.8%; font-size: 2em">
+                    <h1>Administrator Panel</h1>
+                </div>
+            </div>
+            <div class="col-sm"></div>
         </div>
 
         <div class="row">
 
             <div class="col-sm"></div>
-                <div class="col-sm">
-                    <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
-                    <div class="form-group" style="margin: 1%">
-                        <h1 class="display-5 form_header">Add Publisher</h1>
-                        <div class="form-group">
-                            <label th:for="username">Publisher</label>
-                            <input class="form-control" id="pubName"/>
-                        </div>
-                        <input type="submit" value="Add" id="addPub" class="form-control w-25"/>
+            <div class="col-sm">
+                <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
+                <div class="form-group" style="margin: 1%">
+                    <h1 class="display-5 form_header">Add Publisher</h1>
+                    <div class="form-group">
+                        <label th:for="username">Publisher</label>
+                        <input class="form-control" id="pubName"/>
                     </div>
+                    <input type="submit" value="Add" id="addPub" class="form-control w-25"/>
                 </div>
+            </div>
             <div class="col-sm"></div>
         </div>
 
@@ -82,10 +88,10 @@
 
         <div class="row">
             <div class="col"></div>
-            <div class="col-10">
+            <div class="col-lg">
                 <hr style="margin: .1%; margin-left: 1%; max-width: 400px;"/>
             
-                <div method="post" class="container" id="removeLinkForm" style="margin: 1%">
+                <div method="post" id="removeLinkForm" style="margin: 1%">
                 </div>
             </div>
             <div class="col"></div>
